tests/paczka1/small_fuzzy/71174564.err
Error in line 5: 5AGgct3bC S347 46,1
Error in line 4: A706 S347 86,1
